--- a/apicockpit/src/main/webapp/app/layouts/main/main.component.html
+++ b/apicockpit/src/main/webapp/app/layouts/main/main.component.html
@@ -1,5 +1,5 @@
 <jhi-page-ribbon></jhi-page-ribbon>
-<div>
+<!-- <div>
     <router-outlet name="navbar"></router-outlet>
 </div>
 <div class="container-fluid">
@@ -8,4 +8,14 @@
         <router-outlet name="popup"></router-outlet>
     </div>
     <jhi-footer></jhi-footer>
+</div> -->
+
+<div class="wrapper">
+    <router-outlet name="sidebar"></router-outlet>
+    <div class="main-panel">
+        <router-outlet name="navbar"></router-outlet>
+        <div class="content">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
 </div>
