--- a/apicockpit/src/main/webapp/content/scss/vendor.scss
+++ b/apicockpit/src/main/webapp/content/scss/vendor.scss
@@ -9,4 +9,5 @@ eg $input-color: red;
 // Import Bootstrap source files from node_modules
 @import '~bootstrap/scss/bootstrap';
 
+@import './theme';
 /* jhipster-needle-scss-add-vendor JHipster will add new css style */
