Add Unsaved Changes Guard to Project Component
This will prompt an alert to inform users who want to navigate from add new project page without finishing setup

--- a/apicockpit/src/main/webapp/app/entities/api-project/api-project-update.component.html
+++ b/apicockpit/src/main/webapp/app/entities/api-project/api-project-update.component.html
@@ -56,3 +56,13 @@
     </div>
 
 </div>
+
+<swal
+    #confirmUnsavedChanges
+    title="Confirm"
+    text="You have unsaved changes. Leaving this page means losing those changes. Do you want to continue?"
+    type="info"
+    [showCancelButton]="true"
+    [focusCancel]="true"
+    (confirm)="leavePage()">
+></swal>
