--- a/apicockpit/src/main/webapp/app/layouts/sidebar/sidebar.component.html
+++ b/apicockpit/src/main/webapp/app/layouts/sidebar/sidebar.component.html
@@ -10,7 +10,7 @@
         </div>
       </a>
       <a href="http://www.creative-tim.com" class="simple-text logo-normal">
-        Creative Tim
+        Open Banking
         <!-- <div class="logo-image-big">
           <img src="../assets/img/logo-big.png">
         </div> -->
@@ -18,16 +18,16 @@
     </div>
     <div class="sidebar-wrapper">
       <ul class="nav">
-        <li class="active ">
-          <a href="./dashboard.html">
+        <li routerLinkActive="active ">
+          <a routerLink="dashboard">
             <i class="nc-icon nc-bank"></i>
             <p>Dashboard</p>
           </a>
         </li>
-        <li>
-          <a href="./icons.html">
+        <li routerLinkActive="active">
+          <a routerLink="api-project">
             <i class="nc-icon nc-diamond"></i>
-            <p>Icons</p>
+            <p>Projects</p>
           </a>
         </li>
         <li>
