--- a/apicockpit/src/main/webapp/app/entities/api-project/api-project-update.component.html
+++ b/apicockpit/src/main/webapp/app/entities/api-project/api-project-update.component.html
@@ -44,21 +44,32 @@
                         <!-- <select class="form-control" id="field_api" multiple name="api" [(ngModel)]="apiProject.apis">
                             <option [ngValue]="getSelected(apiProject.apis, apiProjectServiceOption)" *ngFor="let apiProjectServiceOption of apiprojectservices; trackBy: trackApiProjectServiceById">{{apiProjectServiceOption.name}}</option>
                         </select> -->
-                        <div class="selected-apis">
-                            <span class="badge badge-primary" *ngFor="let api of apiProject.apis" (click)="removeApi(api)">
-                                <span [innerText]="api.name"></span>
-                                <a><i class="remove glyphicon glyphicon-remove glyphicon-white"></i></a>
-                            </span>
-                        </div>
+                        <div class="row">
+                                <div class="col-10">
+                                    <div class="card" *ngFor="let apiProjectServiceOption of apiprojectservices; trackBy: trackApiProjectServiceById">
+                                        <div class="card-body" style="padding-top:0; padding-bottom:0;">
+                                            <span style="vertical-align: middle; top: 50%; transform: translateY(-50%); position: absolute;">
+                                                {{apiProjectServiceOption.name}}
+                                            </span>
+                                            <button class="btn btn-success float-right" type="button" id="" (click)="getSelected(apiProject.apis, apiProjectServiceOption)">Add</button>
+                                        </div>
+                                    </div>
+                                </div>
 
-                        <div class="card" *ngFor="let apiProjectServiceOption of apiprojectservices; trackBy: trackApiProjectServiceById">
-                            <div class="card-body" style="padding-top:0; padding-bottom:0;">
-                                <span style="vertical-align: middle; top: 50%; transform: translateY(-50%); position: absolute;">
-                                    {{apiProjectServiceOption.name}}
-                                </span>
-                                <button class="btn btn-success float-right" type="button" id="" (click)="getSelected(apiProject.apis, apiProjectServiceOption)">Add</button>
-                            </div>
+                                <div class="col-2">
+                                    <div class="selected-apis">
+                                        <span class="badge badge-primary" *ngFor="let api of apiProject.apis" (click)="removeApi(api)">
+                                            <span [innerText]="api.name"></span>
+                                            <a><i class="remove glyphicon glyphicon-remove glyphicon-white"></i></a>
+                                        </span>
+                                    </div>
+                                </div>
                         </div>
+                        <ng-selectize [options]="apiprojectservices"></ng-selectize>
+
+
+
+
                     </div>
                     <div class="form-group">
                         <label class="form-control-label" jhiTranslate="apicockpitApp.apiProject.owner" for="field_owner">Owner</label>
