--- a/apicockpit/src/main/webapp/app/layouts/sidebar/sidebar.component.html
+++ b/apicockpit/src/main/webapp/app/layouts/sidebar/sidebar.component.html
@@ -9,7 +9,7 @@
           <!-- <img src="../assets/img/logo-small.png"> -->
         </div>
       </a>
-      <a href="http://www.creative-tim.com" class="simple-text logo-normal">
+      <a routerLink="/" class="simple-text logo-normal">
         Open Banking
         <!-- <div class="logo-image-big">
           <img src="../assets/img/logo-big.png">
