--- a/apicockpit/src/main/webapp/content/css/paper-theme.css
+++ b/apicockpit/src/main/webapp/content/css/paper-theme.css
@@ -2298,7 +2298,10 @@ button,
 input,
 optgroup,
 select,
-textarea {
+textarea,
+.card-category,
+.card-title,
+div.stats {
     font-family: 'Montserrat', 'Helvetica Neue', Arial, sans-serif;
 }
 
