--- a/apicockpit/src/main/webapp/app/layouts/navbar/navbar.scss
+++ b/apicockpit/src/main/webapp/app/layouts/navbar/navbar.scss
@@ -84,3 +84,9 @@ Logo styles
         }
     }
 }
+
+.search-field {
+    color: #66615b;
+    background-color: rgba(222, 222, 222, 0.3);
+    border: none;
+}
