--- a/apicockpit/src/main/webapp/content/css/loading.css
+++ b/apicockpit/src/main/webapp/content/css/loading.css
@@ -1,4 +1,4 @@
-@keyframes lds-pacman-1 {
+/* @keyframes lds-pacman-1 {
     0% {
         -webkit-transform: rotate(0deg);
         transform: rotate(0deg);
@@ -130,11 +130,12 @@
     width: 24px;
     height: 24px;
     border-radius: 50%;
-    background-image: url('../images/hipster192.png');
+    background-image: url('../images/OpenBankingLoading.png');
     background-size: contain;
     -webkit-animation: lds-pacman-3 1s linear infinite;
     animation: lds-pacman-3 1.5s linear infinite;
 }
+
 .app-loading .lds-pacman > div:nth-child(1) div:nth-child(1) {
     -webkit-animation-delay: -0.67s;
     animation-delay: -1s;
@@ -152,4 +153,17 @@
     height: 200px !important;
     -webkit-transform: translate(-100px, -100px) scale(1) translate(100px, 100px);
     transform: translate(-100px, -100px) scale(1) translate(100px, 100px);
+} */
+.app-loading {
+    position: relative;
+    height: 500px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.app-loading .open-banking {
+    /* height:100px; */
+    position: absolute;
+
+    background-image: url('../images/OpenBankingLoading.png');
+    background-repeat: no-repeat;
 }
