Update theme for menu

--- a/apicockpit/src/main/webapp/app/layouts/sidebar/sidebar.component.scss
+++ b/apicockpit/src/main/webapp/app/layouts/sidebar/sidebar.component.scss
@@ -2,7 +2,7 @@
 }
 
 .dropdown-menu {
-    left: 0 !important;
-    width: 100%;
-    display: block;
+    // left: 0 !important;
+    // width: 100%;
+    // display: block;
 }
