--- a/apicockpit/src/main/webapp/app/entities/api-project/api-project.component.html
+++ b/apicockpit/src/main/webapp/app/entities/api-project/api-project.component.html
@@ -62,7 +62,7 @@
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
                         </button>
                         <button type="submit"
-                                [routerLink]="['/', { outlets: { popup: 'api-project/'+ apiProject.id + '/delete'} }]"
+                                (click)="deleteProject(apiProject)"
                                 replaceUrl="true"
                                 queryParamsHandling="merge"
                                 class="btn btn-danger btn-sm">
