--- a/apicockpit/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/apicockpit/src/main/webapp/app/layouts/footer/footer.component.html
@@ -1,3 +1,3 @@
 <div class="footer">
-    <p jhiTranslate="footer">This is your footer</p>
+    <p jhiTranslate="footer">I am not entily sue what this is</p>
 </div>
