--- a/apicockpit/src/main/webapp/app/layouts/main/main.component.html
+++ b/apicockpit/src/main/webapp/app/layouts/main/main.component.html
@@ -10,12 +10,13 @@
     <jhi-footer></jhi-footer>
 </div> -->
 
-<div class="wrapper">
-    <router-outlet name="sidebar"></router-outlet>
+<div class="wrapper" [ngSwitch]="isAuthenticated()">
+    <router-outlet name="sidebar" *ngSwitchCase="true"></router-outlet>
     <div class="main-panel">
         <router-outlet name="navbar"></router-outlet>
         <div class="content">
             <router-outlet></router-outlet>
+            <router-outlet name="popup"></router-outlet>
         </div>
     </div>
 </div>
