--- a/apicockpit/src/main/webapp/app/entities/api-project/api-project-update.component.html
+++ b/apicockpit/src/main/webapp/app/entities/api-project/api-project-update.component.html
@@ -4,11 +4,11 @@
                 <h2 id="jhi-api-project-heading" jhiTranslate="apicockpitApp.apiProject.home.createOrEditLabel">New Project</h2>
                 <div>
                     <jhi-alert-error></jhi-alert-error>
-                    <!-- <div class="form-group" [hidden]="!apiProject.id">
+                    <div class="form-group" hidden>
                         <label for="id" jhiTranslate="global.field.id">ID</label>
                         <input type="text" class="form-control" id="id" name="id"
                             [(ngModel)]="apiProject.id" readonly />
-                    </div> -->
+                    </div>
                     <div class="form-group">
                         <label class="form-control-label" jhiTranslate="apicockpitApp.apiProject.name" for="field_name">Name</label>
                         <input type="text" class="form-control" name="name" id="field_name"
@@ -40,39 +40,21 @@
                             </label>
                     </div>
                     <div class="form-group">
-                        <label jhiTranslate="apicockpitApp.apiProject.api" for="field_api">Api</label>
-                        <!-- <select class="form-control" id="field_api" multiple name="api" [(ngModel)]="apiProject.apis">
-                            <option [ngValue]="getSelected(apiProject.apis, apiProjectServiceOption)" *ngFor="let apiProjectServiceOption of apiprojectservices; trackBy: trackApiProjectServiceById">{{apiProjectServiceOption.name}}</option>
-                        </select> -->
+                        <label jhiTranslate="apicockpitApp.apiProject.api" for="field_api">Selected Api</label>
                         <div class="row">
-                                <div class="col-10">
-                                    <div class="card" *ngFor="let apiProjectServiceOption of apiprojectservices; trackBy: trackApiProjectServiceById">
-                                        <div class="card-body" style="padding-top:0; padding-bottom:0;">
-                                            <span style="vertical-align: middle; top: 50%; transform: translateY(-50%); position: absolute;">
-                                                {{apiProjectServiceOption.name}}
-                                            </span>
-                                            <button class="btn btn-success float-right" type="button" id="" (click)="getSelected(apiProject.apis, apiProjectServiceOption)">Add</button>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col-2">
-                                    <div class="selected-apis">
-                                        <span class="badge badge-primary" *ngFor="let api of apiProject.apis" (click)="removeApi(api)">
-                                            <span [innerText]="api.name"></span>
-                                            <a><i class="remove glyphicon glyphicon-remove glyphicon-white"></i></a>
-                                        </span>
-                                    </div>
+                                <div class="col-12">
+                                    <ng-select
+                                        name="apis"
+                                        [items]="apiprojectservices"
+                                        [multiple]="true"
+                                        [closeOnSelect]="false"
+                                        [searchable]="false"
+                                        bindLabel="name"
+                                        placeholder="Select Api"
+                                        [(ngModel)]="apiProject.apis">
+                                    </ng-select>
                                 </div>
                         </div>
-                        <!-- <ng-selectize [options]="apiProject.apis"></ng-selectize> -->
-                        <ng-select
-                            [items]="apiProject.apis"
-                            [multiple]="true"
-                        ></ng-select>
-
-
-
 
                     </div>
                     <div class="form-group">
