--- a/apicockpit/src/main/webapp/app/home/home.scss
+++ b/apicockpit/src/main/webapp/app/home/home.scss
@@ -2,13 +2,6 @@
 Main page styles
 ========================================================================== */
 
-.home-no-auth {
-    background: url('../../content/images/bg-home.jpg');
-    width: 100%;
-    display: block;
-    height: auto;
-}
-
 .main-slider-caption.container {
     background-color: rgba(255, 255, 255, 0.9);
     border-radius: 4px;
@@ -16,6 +9,7 @@ Main page styles
     width: 50%;
     margin-left: 10%;
     float: left;
+    margin-top: 10%;
 }
 
 .main-slider-caption h1 {
@@ -58,4 +52,30 @@ Main page styles
     border-radius: 5px;
     transition: all 300ms ease 0s;
     line-height: 1.9;
+    cursor: pointer;
+}
+
+.sandbox-bracket {
+    font-weight: bold;
+    color: #000;
+}
+
+.box {
+    padding: 60px 0px;
+}
+
+.box-part {
+    background: #fff;
+    border-radius: 0;
+    padding: 60px 10px;
+    margin: 30px 0px;
+    border-radius: 12px;
+    height: 15rem;
+}
+.text {
+    margin: 20px 0px;
+}
+
+.fa {
+    color: #1f3d7f;
 }
