--- a/apicockpit/src/main/webapp/app/layouts/main/main.component.scss
+++ b/apicockpit/src/main/webapp/app/layouts/main/main.component.scss
@@ -1,4 +1,24 @@
 .main-panel-alt {
     width: 100% !important;
     background: url('../../../content/images/bg-home.jpg');
+    background-repeat: no-repeat;
+}
+
+:host {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+
+    .nav-section {
+        flex-grow: 1;
+    }
+
+    .wrapper {
+        flex-grow: 5;
+        height: inherit;
+    }
+
+    jhi-footer {
+        flex-grow: 1;
+    }
 }
