--- a/apicockpit/src/main/webapp/app/layouts/sidebar/sidebar.component.html
+++ b/apicockpit/src/main/webapp/app/layouts/sidebar/sidebar.component.html
@@ -1,18 +1,14 @@
 <div class="sidebar" data-color="white" data-active-color="danger">
-    <!--
-      Tip 1: You can change the color of the sidebar using: data-color="blue | green | orange | red | yellow"
-  -->
+    <jhi-page-ribbon></jhi-page-ribbon>
+
     <div class="logo">
-      <a href="http://www.creative-tim.com" class="simple-text logo-mini">
-        <div class="logo-image-small">
-          <!-- <img src="../assets/img/logo-small.png"> -->
-        </div>
+      <a class="simple-text logo-mini" routerLink="/">
+        <div class="logo-image-small"></div>
       </a>
       <a routerLink="/" class="simple-text logo-normal">
-        Open Banking Ng
-        <!-- <div class="logo-image-big">
-          <img src="../assets/img/logo-big.png">
-        </div> -->
+         <div class="logo-image-big">
+          <img src="../../../content/images/logo.png">
+        </div>
       </a>
     </div>
     <div class="sidebar-wrapper">
@@ -23,7 +19,7 @@
             <p>Dashboard</p>
           </a>
         </li>
-        <li routerLinkActive="active">
+        <li>
           <a routerLink="api-project">
             <i class="nc-icon nc-diamond"></i>
             <p>Projects</p>
@@ -93,11 +89,9 @@
                     <li ngbDropdown class="nav-item dropdown pointer" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                         <a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);" id="entity-menu">
                             <span>
-                                <!-- <fa-icon [icon]="'th-list'"></fa-icon>
-                                 -->
                                  <i class="nc-icon nc-tile-56"></i>
                                 <span jhiTranslate="global.menu.entities.main">
-                                    Entities
+                                    Models
                                 </span>
                             </span>
                         </a>
@@ -168,43 +162,12 @@
                                     <span jhiTranslate="global.menu.entities.grovyProcConfig">Grovy Proc Config</span>
                                 </a>
                             </li>
-                            <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
                         </ul>
                     </li>
-                </li>
-            </ul>
-        </div>
+
+               </ul>
+            </div>
         </li>
-        <!-- <li>
-          <a href="./notifications.html">
-            <i class="nc-icon nc-bell-55"></i>
-            <p>Notifications</p>
-          </a>
-        </li>
-        <li>
-          <a href="./user.html">
-            <i class="nc-icon nc-single-02"></i>
-            <p>User Profile</p>
-          </a>
-        </li>
-        <li>
-          <a href="./tables.html">
-            <i class="nc-icon nc-tile-56"></i>
-            <p>Table List</p>
-          </a>
-        </li>
-        <li>
-          <a href="./typography.html">
-            <i class="nc-icon nc-caps-small"></i>
-            <p>Typography</p>
-          </a>
-        </li>
-        <li class="active-pro">
-          <a href="./upgrade.html">
-            <i class="nc-icon nc-spaceship"></i>
-            <p>Upgrade to PRO</p>
-          </a>
-        </li> -->
       </ul>
     </div>
   </div>
