--- a/apicockpit/src/main/webapp/content/css/loading.css
+++ b/apicockpit/src/main/webapp/content/css/loading.css
@@ -130,7 +130,7 @@
     width: 24px;
     height: 24px;
     border-radius: 50%;
-    background-image: url('../images/OpenBankingLoading.png');
+    background-image: url('../images/logo.png');
     background-size: contain;
     -webkit-animation: lds-pacman-3 1s linear infinite;
     animation: lds-pacman-3 1.5s linear infinite;
@@ -164,6 +164,6 @@
     /* height:100px; */
     position: absolute;
 
-    background-image: url('../images/OpenBankingLoading.png');
+    background-image: url('../images/logo.png');
     background-repeat: no-repeat;
 }
