--- a/apicockpit/src/main/webapp/content/scss/global.scss
+++ b/apicockpit/src/main/webapp/content/scss/global.scss
@@ -224,3 +224,5 @@
 // }
 
 // /* jhipster-needle-scss-add-main JHipster will add new css style */
+
+@import '~@ng-select/ng-select/themes/default.theme.css';
