--- a/apicockpit/src/main/webapp/app/account/register/register.component.html
+++ b/apicockpit/src/main/webapp/app/account/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="main">
     <div class="row justify-content-center">
         <div class="col-md-12">
-            <h1 jhiTranslate="register.title">Registration</h1><br/>
+            <h1 jhiTranslate="register.title">Registration</h1>
 
             <div class="alert alert-success" *ngIf="success" jhiTranslate="register.messages.success">
                 <strong>Registration saved!</strong> Please check your email for confirmation.
