--- a/apicockpit/src/main/webapp/app/account/register/register.component.scss
+++ b/apicockpit/src/main/webapp/app/account/register/register.component.scss
@@ -1,7 +1,8 @@
 .main {
     padding: 40px;
+    min-height: calc(100vh - 123px);
     margin-top: 93px;
     width: 60%;
     border-radius: 4px;
-    margin: 5% auto;
+    margin: 0 auto;
 }
