--- a/apicockpit/src/main/webapp/app/layouts/main/main.component.html
+++ b/apicockpit/src/main/webapp/app/layouts/main/main.component.html
@@ -1,19 +1,23 @@
-<div class="nav-section">
+<jhi-page-ribbon></jhi-page-ribbon>
+<!-- <div>
     <router-outlet name="navbar"></router-outlet>
 </div>
-<div class="wrapper" [ngSwitch]="isAuthenticated()">
-    <router-outlet name="sidebar" *ngSwitchCase="true"></router-outlet>
+<div class="container-fluid">
+    <div class="card jh-card">
+        <router-outlet></router-outlet>
+        <router-outlet name="popup"></router-outlet>
+    </div>
+    <jhi-footer></jhi-footer>
+</div> -->
 
-    <div class="main-panel"
-         [ngClass]="{
+<div class="wrapper">
+    <router-outlet name="sidebar" *ngIf="isAuthenticated()"></router-outlet>
+    <div class="main-panel" [ngClass]="{
     'main-panel-alt':isAuthenticated() == false
     }">
-
+        <router-outlet name="navbar"></router-outlet>
         <div class="content">
             <router-outlet></router-outlet>
-            <router-outlet name="popup"></router-outlet>
         </div>
     </div>
-
 </div>
-<jhi-footer></jhi-footer>
