WIP MI UI fixes

--- a/apicockpit/src/main/webapp/app/layouts/menu/menu.component.html
+++ b/apicockpit/src/main/webapp/app/layouts/menu/menu.component.html
@@ -1,86 +1,53 @@
-<div class="content">
-        <div class="row">
-            <div class="col-12">
-                <h3>Welcome back! Here are some of the resources you might need</h3>
-            </div>
-        </div><br/>
-        <div class="row">
-          <div class="col-lg-4 col-md-6 col-sm-6">
-            <div class="card card-stats">
-              <div class="card-body ">
-                <div class="row">
-                  <div class="col-5 col-md-4">
-                    <div class="icon-big text-center icon-warning">
-                      <i class="nc-icon nc-globe text-warning"></i>
-                    </div>
-                  </div>
-                  <div class="col-5 col-md-6">
-                    <div class="numbers">
-                      <p class="card-category text-left">Publish</p>
-                      <p class="card-subtitle text-left">Publish and manage APIS, create apps, and manage your deployments</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-sm-6">
-              <div class="card card-stats">
-                  <div class="card-body ">
-                      <div class="row">
-                          <div class="col-5 col-md-4">
-                              <div class="icon-big text-center icon-warning">
-                                  <i class="nc-icon nc-globe text-warning"></i>
-                              </div>
-                          </div>
-                          <div class="col-5 col-md-6">
-                              <div class="numbers">
-                                  <p class="card-category text-left">Develop</p>
-                                  <p class="card-subtitle text-left">Discover APIs to use in your apps</p>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-sm-6">
-              <div class="card card-stats">
-                  <div class="card-body ">
-                      <div class="row">
-                          <div class="col-5 col-md-4">
-                              <div class="icon-big text-center icon-warning">
-                                  <i class="nc-icon nc-globe text-warning"></i>
-                              </div>
-                          </div>
-                          <div class="col-5 col-md-6">
-                              <div class="numbers">
-                                  <p class="card-category text-left">Administrator</p>
-                                  <p class="card-subtitle text-left">Configure your portal and manager users</p>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-sm-6">
-              <div class="card card-stats">
-                  <div class="card-body ">
-                      <div class="row">
-                          <div class="col-5 col-md-4">
-                              <div class="icon-big text-center icon-warning">
-                                  <i class="nc-icon nc-globe text-warning"></i>
-                              </div>
-                          </div>
-                          <div class="col-5 col-md-6">
-                              <div class="numbers">
-                                  <p class="card-category text-left">Monitor</p>
-                                  <p class="card-subtitle text-left">View real-time analytics for your APIs and app</p>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-        </div>
 
-      </div>
+<div class="row" >
+    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 " routerLink="/api-project">
+        <div class="box-part text-center itemBox">
+            <i class="fa fa-cloud-upload fa-3x" aria-hidden="true"></i>
+            <div >
+                <h4>Publish</h4>
+            </div>
+            <div class="text">
+                <span>Publish and manage APIs, create apps, and manage your deployments.</span>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+        <div class="box-part text-center itemBox">
+            <i class="fa fa-file-code-o fa-3x" aria-hidden="true"></i>
+            <div>
+                <h4>Discover</h4>
+            </div>
+            <div class="text">
+                <span>Discover what Open Banking APIs to use in your apps and projects.</span>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12"  routerLink="/profile">
+        <div class="box-part text-center itemBox">
+            <i class="fa fa-cogs fa-3x" aria-hidden="true"></i>
+            <div>
+                <h4>Administration</h4>
+            </div>
+            <div class="text">
+                <span>Configure your profile and manage users.</span>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="row">
+    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" routerLink="/dashboard">
+        <div class="box-part text-center itemBox">
+            <i class="fa fa-cloud-upload fa-3x" aria-hidden="true"></i>
+            <div >
+                <h4>Dash Board</h4>
+            </div>
+            <div class="text">
+                <span>View stats for your apps and projects.</span>
+            </div>
+        </div>
+    </div>
+
+</div>
