--- a/apicockpit/src/main/webapp/app/layouts/sidebar/sidebar.component.html
+++ b/apicockpit/src/main/webapp/app/layouts/sidebar/sidebar.component.html
@@ -2,10 +2,10 @@
     <jhi-page-ribbon></jhi-page-ribbon>
 
     <div class="logo">
-      <a class="simple-text logo-mini" routerLink="/">
+      <a class="simple-text logo-mini" routerLink="/menu">
         <div class="logo-image-small"></div>
       </a>
-      <a routerLink="/" class="simple-text logo-normal">
+      <a routerLink="/menu" class="simple-text logo-normal">
          <div class="logo-image-big">
           <img src="../../../content/images/logo.png">
         </div>
