--- a/apicockpit/src/main/webapp/app/layouts/menu/menu.component.scss
+++ b/apicockpit/src/main/webapp/app/layouts/menu/menu.component.scss
@@ -1,12 +1,122 @@
-.card-subtitle {
-    margin-top: 10px;
-    margin-bottom: 20px;
-    font-size: 10px;
-    line-height: 1.5;
-    color: #9a9a9a;
+//.card-subtitle {
+//    margin-top: 10px;
+//    margin-bottom: 20px;
+//    font-size: 10px;
+//    line-height: 1.5;
+//    color: #9a9a9a;
+//}
+//
+//.card {
+//    min-height: 120px;
+//    cursor: pointer;
+//}
+//
+
+.sandbox-bracket {
+    font-weight: bold;
+    color: #000;
 }
 
-.card {
-    min-height: 120px;
+.box {
+    padding: 60px 0px;
+}
+
+.box-part {
+    background: #fff;
+    border-radius: 0;
+    padding: 60px 10px;
+    margin: 30px 0px;
+    border-radius: 12px;
+    height: 15rem;
+}
+
+.itemBox {
+    //width: 280px;
+    //height: 260px;
     cursor: pointer;
+    border-radius: 10px;
+    overflow: hidden;
+    background: #fff;
+    box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.15), 0 8px 16px -8px rgba(0, 0, 0, 0.3);
+    transition: all 0.15s ease;
+}
+.itemBox:hover {
+    box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.3), 0 8px 16px -8px rgba(0, 0, 0, 0.3);
+    transform: translateY(-4px);
+}
+.itemBox .itemBoxImage {
+    width: 100%;
+    height: 186px;
+}
+.itemBox .itemBoxImage img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.itemBox .itemBoxContent {
+    position: relative;
+}
+.itemBox .itemBoxContent .itemCTA {
+    position: absolute;
+    right: 21px;
+    top: -38px;
+    display: block;
+    width: 42px;
+    height: 42px;
+    border-radius: 300px;
+    background: #fff;
+    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.15);
+    text-align: center;
+    text-decoration: none;
+    color: #1abc9c;
+    transition: all 0.3s ease;
+}
+.itemBox .itemBoxContent .itemCTA::after {
+    margin-left: 2px;
+    content: '';
+    font-family: FontAwesome;
+    line-height: 42px;
+}
+.itemBox .itemBoxContent .itemCTA:hover,
+.itemBox .itemBoxContent .itemCTA:focus {
+    background: #1abc9c;
+    color: #fff;
+    box-shadow: 0 2px 8px 0 rgba(26, 188, 156, 0.4);
+}
+.itemBox .itemBoxContent .itemCTA:hover::after,
+.itemBox .itemBoxContent .itemCTA:focus::after {
+    text-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+}
+.itemBox .itemBoxContent .itemTitle {
+    margin: 18px 0 0 18px;
+    max-width: calc(100% - 101px);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.3;
+}
+.itemBox .itemBoxContent .itemInfo {
+    position: absolute;
+    right: 21px;
+    bottom: 4px;
+    width: 42px;
+    text-align: center;
+    font-weight: 700;
+    color: rgba(0, 0, 0, 0.3);
+    text-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+    transition: all 0.15s ease;
+}
+.itemBox .itemBoxContent .itemInfo::after {
+    margin-left: 4px;
+    content: '';
+    opacity: 0.6;
+    font-family: FontAwesome;
+    font-weight: 300;
+}
+
+.text {
+    margin: 20px 0px;
+}
+
+.fa {
+    color: #1f3d7f;
 }
