Api project fix (#4)
* wip

* wip

* dashboard menu

* project fix

--- a/apicockpit/src/main/webapp/app/entities/api-project/api-project-update.component.html
+++ b/apicockpit/src/main/webapp/app/entities/api-project/api-project-update.component.html
@@ -45,6 +45,7 @@
                                 <div class="col-12">
                                     <ng-select
                                         name="apis"
+                                        ngDefaultControl
                                         [items]="apiprojectservices"
                                         [multiple]="true"
                                         [closeOnSelect]="false"
