--- a/apicockpit/src/main/webapp/app/home/home.scss
+++ b/apicockpit/src/main/webapp/app/home/home.scss
@@ -106,3 +106,55 @@ Main page styles
     line-height: 1.9;
     cursor: pointer;
 }
+
+.main-slider-caption.container {
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 4px;
+    padding: 30px;
+    width: 50%;
+    margin-left: 10%;
+    float: left;
+}
+
+.main-slider-caption h1 {
+    text-transform: none;
+    margin: 0 0 15px;
+    line-height: 1.3;
+    font-size: 50px;
+    font-weight: 400;
+}
+
+.main-slider-caption h1 {
+    color: #27ae60;
+}
+
+.main-slider-caption p {
+    font-size: 20px;
+}
+
+.main-slider-caption p {
+    color: #000000;
+}
+
+.main-slider-caption {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 30%;
+    margin: auto;
+}
+
+.button {
+    background-color: #1a3d81;
+    color: #fff;
+    font-size: 13px;
+    border: 0;
+    text-transform: uppercase;
+    padding: 15px 30px;
+    display: inline-block;
+    font-weight: bold;
+    border-radius: 5px;
+    transition: all 300ms ease 0s;
+    line-height: 1.9;
+    cursor: pointer;
+}
