--- a/apicockpit/src/main/webapp/app/layouts/main/main.component.html
+++ b/apicockpit/src/main/webapp/app/layouts/main/main.component.html
@@ -7,7 +7,7 @@
         <router-outlet></router-outlet>
         <router-outlet name="popup"></router-outlet>
     </div>
-    <jhi-footer></jhi-footer>
+
 </div> -->
 
 <div class="wrapper">
@@ -21,4 +21,4 @@
         </div>
     </div>
 </div>
-<jhi-footer></jhi-footer>
+<!--<jhi-footer></jhi-footer>-->
