--- a/apicockpit/src/main/webapp/app/layouts/main/main.component.html
+++ b/apicockpit/src/main/webapp/app/layouts/main/main.component.html
@@ -1,15 +1,3 @@
-<jhi-page-ribbon></jhi-page-ribbon>
-<!-- <div>
-    <router-outlet name="navbar"></router-outlet>
-</div>
-<div class="container-fluid">
-    <div class="card jh-card">
-        <router-outlet></router-outlet>
-        <router-outlet name="popup"></router-outlet>
-    </div>
-
-</div> -->
-
 <div class="wrapper">
     <router-outlet name="sidebar" *ngIf="isAuthenticated()"></router-outlet>
     <div class="main-panel" [ngClass]="{
@@ -18,7 +6,8 @@
         <router-outlet name="navbar"></router-outlet>
         <div class="content">
             <router-outlet></router-outlet>
+            <router-outlet name="popup"></router-outlet>
         </div>
     </div>
 </div>
-<!--<jhi-footer></jhi-footer>-->
+<jhi-footer></jhi-footer>
