--- a/apicockpit/src/main/webapp/app/layouts/sidebar/sidebar.component.html
+++ b/apicockpit/src/main/webapp/app/layouts/sidebar/sidebar.component.html
@@ -26,7 +26,7 @@
           </a>
         </li>
         <li>
-        <div class="navbar-collapse collapse" id="navbarResponsive" [ngbCollapse]="isNavbarCollapsed" >
+            <div class="navbar-collapse collapse" id="navbarResponsive" [ngbCollapse]="isNavbarCollapsed" [ngSwitch]="isAuthenticated()">
             <ul class="nav" >
                 <li ngbDropdown class="nav-item dropdown pointer" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                     <a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);" id="admin-menu">
