--- a/apicockpit/src/main/webapp/app/layouts/main/main.component.html
+++ b/apicockpit/src/main/webapp/app/layouts/main/main.component.html
@@ -1,13 +1,13 @@
 <div class="wrapper">
     <router-outlet name="sidebar" *ngIf="isAuthenticated()"></router-outlet>
-    <div class="main-panel" [ngClass]="{
-    'main-panel-alt':isAuthenticated() == false
-    }">
+    <div class="main-panel" [ngClass]="{ 'main-panel-alt':isAuthenticated() == false }">
         <router-outlet name="navbar"></router-outlet>
-        <div class="content">
-            <router-outlet></router-outlet>
-            <router-outlet name="popup"></router-outlet>
+            <div class="content">
+                <div class="card router-outlet-wrapper">
+                     <router-outlet></router-outlet>
+                </div>
+                <router-outlet name="popup"></router-outlet>
+            </div>
         </div>
-    </div>
 </div>
 <jhi-footer></jhi-footer>
